--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crifto_shopping_app",
-  "homepage": "https://moideeenmashad.github.io/crifto_shopping",
+  "homepage": "https://moideeenmashad.github.io/crifto_shopping/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
