--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "fontkit": "^2.0.2",
     "gh-pages": "^6.1.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
