--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "crifto_shopping_app",
-  "homepage": "https://moideeenmashad.github.io/crifto_shopping/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,9 +12,9 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "fontkit": "^2.0.2",
-    "gh-pages": "^6.1.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-owl-carousel": "^2.3.3",
@@ -25,8 +24,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
